# SwiftCppInteroperability

./: .gitignore  Package.swift  README.md
.github/workflows/: build.yml
Sources/SwiftCppInter/: Game.swift  SwiftCppInter.swift
Sources/SwiftCppInter/Extensions/: String.swift
Sources/cxxLibrary/: CMakeLists.txt  player.cpp
Sources/cxxLibrary/include/: player.h
Tests/SwiftCppInterTests/: SwiftCppInterTests.swift
